--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="652.0" prefWidth="866.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <right>
-        <VBox prefHeight="649.0" prefWidth="118.0" BorderPane.alignment="CENTER">
+        <VBox prefHeight="650.0" prefWidth="210.0" BorderPane.alignment="CENTER">
             <children>
                 <Label text="Vyčerpanosť">
                     <VBox.margin>
@@ -31,7 +32,10 @@
             </children>
             <cursor>
                 <Cursor fx:constant="DEFAULT" />
-            </cursor></VBox>
+            </cursor>
+         <padding>
+            <Insets bottom="9.0" left="9.0" right="9.0" top="9.0" />
+         </padding></VBox>
     </right>
     <center>
       <AnchorPane fx:id="panel" BorderPane.alignment="CENTER">
@@ -41,10 +45,13 @@
                         <Image url="@../ZámernýKríž.png" />
                     </image>
                 </ImageView>
-                <ImageView fitHeight="611.0" fitWidth="631.0" onMouseClicked="#pifpaf" onMouseMoved="#mouseMove" opacity="0.41" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="590.0" fitWidth="582.0" layoutX="50.0" layoutY="30.0" onMouseClicked="#pifpaf" onMouseMoved="#mouseMove" opacity="0.41" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../terc.jpg" />
+                        <Image url="@../target.png" />
                     </image>
+               <rotationAxis>
+                  <Point3D />
+               </rotationAxis>
                 </ImageView>
          </children>
       </AnchorPane>
