--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,7 +16,7 @@
     <right>
         <VBox prefHeight="650.0" prefWidth="210.0" style="-fx-background-color: #262626;" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Vyčerpanosť" textFill="WHITE">
+                <Label style="-fx-font-weight: bold;" text="Vyčerpanosť" textFill="WHITE">
                     <VBox.margin>
                         <Insets left="5.0" right="5.0" top="10.0" />
                     </VBox.margin>
@@ -25,9 +26,14 @@
                         <Insets left="5.0" right="5.0" top="10.0" />
                     </VBox.margin>
                 </Slider>
-            <Label text="Vietor" textFill="WHITE" />
+            <Label style="-fx-font-weight: bold;" text="Vietor" textFill="WHITE" />
             <Slider fx:id="vietor" blockIncrement="1.0" majorTickUnit="5.0" max="10.0" min="-10.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
             <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#reset" text="RESET" />
+            <TextArea fx:id="textarea" editable="false" prefHeight="200.0" prefWidth="200.0" style="-fx-font-weight: bold;">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </TextArea>
             </children>
             <cursor>
                 <Cursor fx:constant="DEFAULT" />
@@ -42,7 +48,7 @@
    <center>
       <AnchorPane fx:id="panel" maxHeight="650.4" maxWidth="632.8" onMouseClicked="#pifpaf" onMouseMoved="#mouseMove" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-                <ImageView fitHeight="452.0" fitWidth="452.0" layoutX="100.0" layoutY="100.0" opacity="0.41" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="107.0">
+                <ImageView fx:id="target" fitHeight="452.0" fitWidth="452.0" pickOnBounds="true" preserveRatio="true" x="100.0" y="100.0">
                     <image>
                         <Image url="@../target.png" />
                     </image>
