--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -27,7 +27,7 @@
                     </VBox.margin>
                 </Slider>
             <Label style="-fx-font-weight: bold;" text="Vietor" textFill="WHITE" />
-            <Slider fx:id="vietor" blockIncrement="1.0" majorTickUnit="5.0" max="10.0" min="-10.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+            <Slider fx:id="wind" blockIncrement="1.0" majorTickUnit="5.0" max="10.0" min="-10.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
             <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#reset" text="RESET" />
             <TextArea fx:id="textarea" editable="false" prefHeight="200.0" prefWidth="200.0" style="-fx-font-weight: bold;">
                <VBox.margin>
@@ -46,7 +46,7 @@
         <Cursor fx:constant="NONE" />
     </cursor>
    <center>
-      <AnchorPane fx:id="panel" maxHeight="650.4" maxWidth="632.8" onMouseClicked="#pifpaf" onMouseMoved="#mouseMove" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="panel" maxHeight="650.4" maxWidth="632.8" onMouseClicked="#shoot" onMouseMoved="#mouseMove" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
                 <ImageView fx:id="target" fitHeight="452.0" fitWidth="452.0" pickOnBounds="true" preserveRatio="true" x="100.0" y="100.0">
                     <image>
