--- a/src/sample/simulator.fxml
+++ b/src/sample/simulator.fxml
@@ -57,6 +57,19 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
+            <Label style="-fx-font-weight: bold; -fx-font-size: 16;" text="Smer vetra" textFill="WHITE">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Label>
+            <ImageView fx:id="windArrow" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0">
+               <image>
+                  <Image url="@../arrow.png" />
+               </image>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </ImageView>
             </children>
             <cursor>
                 <Cursor fx:constant="DEFAULT" />
