text area design

--- a/src/sample/styles.css
+++ b/src/sample/styles.css
@@ -1,7 +1,6 @@
 .slider .track {
     -fx-background-color: #FF740A;
     -fx-background-radius: 0;
-
 }
 
 .slider .thumb {
@@ -13,4 +12,46 @@
 }
 .textInput{
     -fx-text-fill: white;
+}
+.text-area {
+    -fx-background-color: #172332;
+    -fx-text-fill: white;
+    -fx-background-radius: 0;
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.text-area .scroll-pane .viewport{
+    -fx-background-color: transparent;
+}
+
+
+.text-area .scroll-pane .content{
+    -fx-background-color: transparent;
+}
+.text-area .scroll-bar .thumb{
+    -fx-border-radius: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: #FF740A;
+}
+.text-area .scroll-bar .track{
+    -fx-border-radius: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: #172332;
+    -fx-border-color: transparent;
+}
+
+.scroll-bar:vertical .increment-button ,
+.scroll-bar:vertical .decrement-button {
+    -fx-background-color :transparent;
+    -fx-background-radius : 0.0em;
+    -fx-padding :0.0 10.0 0.0 0.0;
+
+}
+.scroll-bar:vertical .increment-arrow,
+.scroll-bar:vertical .decrement-arrow{
+    -fx-shape : " ";
+    -fx-padding :0.0 0.15em;
 }
